--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jQuery Crash Course | Selectors</title>
+    <title>jQuery Crash Course | DOM Manipulation</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
       body {
