--- a/events/index.html
+++ b/events/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <header>
-      <h1>jQuery Crash Course</h1>
+      <h1>jQuery Crash Course || Events</h1>
     </header>
     <div id="container">
       <h3>Mouse Events</h3>
